infer-out/report.txt
#0
error.c:14: error: Null Dereference
  pointer `ptr` last assigned on line 13 could be null and is dereferenced by call to `strcmp()` at line 14, column 9.
  12. void nullPointerDereference() {
  13.     char *ptr = NULL;
  14.     if (strcmp(ptr, "test") == 0) { // Null pointer dereference
              ^
  15.         printf("This is never reached\n");
  16.     }

#1
error.c:22: error: Resource Leak
  resource of type `_IO_FILE` acquired by call to `fopen()` at line 21, column 18 is not released after line 22, column 5.
  20. void resourceLeak() {
  21.     FILE *file = fopen("test.txt", "r");
  22.     if (file == NULL) {
          ^
  23.         printf("Failed to open file\n");
  24.         return;

Found 2 issues
          Issue Type(ISSUED_TYPE_ID): #
        Resource Leak(RESOURCE_LEAK): 1
  Null Dereference(NULL_DEREFERENCE): 1
